| Summary: | ASTERISK-22482: CDR Assertion failure when local channel leaves parking lot. | ||||
| Reporter: | Richard Mudgett (rmudgett) | Labels: | |||
| Date Opened: | 2013-09-06 19:41:33 | Date Closed: | 2013-09-28 16:03:03 | ||
| Priority: | Major | Regression? | |||
| Status: | Closed/Complete | Components: | CDR/General | ||
| Versions: | SVN 12.0.0-alpha1 | Frequency of Occurrence | Constant | ||
| Related Issues: |
| ||||
| Environment: | Attachments: | ( 0) assertion_failure_log.txt | |||
| Description: | Originating a call with local channels into a parking lot causes an assertion failure in the CDR code.
SIP/100 -- L;2 - L;1 -- Park() default parking lot First call in log initiated: channel originate Local/100@pots extension 740@parkedcalls Second call in log initiated: channel originate Local/100@pots/n extension 740@parkedcalls The assertion failure happens when the local channel leaves the parking lot holding bridge. | ||||
| Comments: | By: Richard Mudgett (rmudgett) 2013-09-06 19:43:28.257-0500 [^assertion_failure_log.txt] - Log from Asterisk start to exit with some annotations. | ||||